<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWaveformType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/waveform_type"
                android:textColor="@color/frequency_color"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWaveformType"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="6dp" />

            <TextView
                android:id="@+id/tvVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/volume"
                android:textColor="@color/frequency_color"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/sbVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" />


            <TextView
                android:id="@+id/tvFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/frequency"
                android:textColor="@color/frequency_color"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/sbFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" />

            <TextView
                android:id="@+id/tvNoiseType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/noise_type"
                android:textColor="@color/frequency_color"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNoiseType"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="6dp" />

            <TextView
                android:id="@+id/tvNoiseVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/noise_volume"
                android:textColor="@color/frequency_color"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/sbNoiseVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" />


            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/morse_speed"
                android:textColor="@color/frequency_color"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/sbGroupsPerMinute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" />


            <TextView
                android:id="@+id/tvTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/morse_text_size"
                android:textColor="@color/frequency_color"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/sbTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" />

            <TextView
                android:id="@+id/tvAlphabet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/alphabet_name"
                android:textColor="@color/frequency_color"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlphabet"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>

    </ScrollView>


    <com.metalichesky.zvuk.generator.view.PlaybackButton
        android:id="@+id/pbGeneratorPlayback"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="30dp"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>